--- a/landing.html
+++ b/landing.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/ejercicio-pug.css">
   </head>
-  <body>
-    <header>
-      <h1>PlatziGames</h1><a class="button">Registro</a>
-    </header>
-  </body>
 </html>
+<body>
+  <header>
+    <h1>MasterGames</h1><a>Hola Walter</a>
+  </header>
+  <section class="intro">
+    <div class="intro__imagen"><img src="images/imagen.png"></div>
+    <div class="intro__contenido">
+      <h2>Juego del 2020</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur
+        adipisicing elit. Vitae, praesentium! 
+        Autem sapiente, quo veritatis perspiciatis 
+        ipsa culpa a adipisci eligendi totam dolores sit enim optio 
+        fugiat sequi aspernatur dolor assumenda!
+      </p><a class="boton">Leer mas</a>
+    </div>
+  </section>
+  <main class="contenido">
+    <div class="caja">
+      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__contenido">
+        <h3>Titulo A</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+      </div>
+    </div>
+    <div class="caja">
+      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__contenido">
+        <h3>Titulo B</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+      </div>
+    </div>
+    <div class="caja">
+      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__contenido">
+        <h3>Titulo C</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p>
+      </div>
+    </div>
+  </main>
+</body>
