--- a/index.html
+++ b/index.html
@@ -16,32 +16,30 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur
         adipisicing elit. Vitae, praesentium! 
-        Autem sapiente, quo veritatis perspiciatis 
-        ipsa culpa a adipisci eligendi totam dolores sit enim optio 
-        fugiat sequi aspernatur dolor assumenda!
-      </p><a class="boton">Leer mas</a>
+        <hr>Aprendiendo a utilizar Preprocesadores <br><strong>PUG, LESS con BEM</strong>
+      </p><a class="boton" href="/html/articulo.html">Leer mas</a>
     </div>
   </section>
   <main class="contenido">
     <div class="caja">
-      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__imagen"><img src="images/cuphead.jpg"/></div>
       <div class="caja__contenido">
-        <h3>Titulo A</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <h3>Cyberpunk 2077 tiene tres prólogos distintos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur</p><a href="/html/articulo.html">Has click aqui :D</a>
       </div>
     </div>
     <div class="caja">
-      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__imagen"><img src="images/xbox.jpg"/></div>
       <div class="caja__contenido">
         <h3>Titulo B</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Lorem ipsum dolor sit amet, consectetur</p><a href="/html/articulo.html">Has click aqui :D</a>
       </div>
     </div>
     <div class="caja">
-      <div class="caja__imagen"><img src="images/imagen.png"/></div>
+      <div class="caja__imagen"><img src="images/fortnite.jpg"/></div>
       <div class="caja__contenido">
         <h3>Titulo C</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur</p>
+        <p>Lorem ipsum dolor sit amet, consectetur</p><a href="/html/articulo.html">Has click aqui :D</a>
       </div>
     </div>
   </main>
